--- a/src/blazey.micro.tests/blazey.micro.tests.csproj
+++ b/src/blazey.micro.tests/blazey.micro.tests.csproj
@@ -35,7 +35,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="context_spec.cs" />
+    <Compile Include="context_specification.cs" />
     <Compile Include="when_first_name_type_instantiated.cs" />
     <Compile Include="FirstName.cs" />
   </ItemGroup>
