--- a/src/blazey.micro.tests/blazey.micro.tests.csproj
+++ b/src/blazey.micro.tests/blazey.micro.tests.csproj
@@ -35,9 +35,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="doubles\AnemicType.cs" />
     <Compile Include="context_specification.cs" />
+    <Compile Include="when_first_name_is_created_from_anemic_type.cs" />
     <Compile Include="when_first_name_type_instantiated.cs" />
-    <Compile Include="FirstName.cs" />
+    <Compile Include="doubles\FirstName.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\blazey.micro\blazey.micro.csproj">
