--- a/src/blazey.micro.tests/blazey.micro.tests.csproj
+++ b/src/blazey.micro.tests/blazey.micro.tests.csproj
@@ -39,7 +39,9 @@
     <Compile Include="context_specification.cs" />
     <Compile Include="when_first_name_is_created_from_anemic_type.cs" />
     <Compile Include="when_first_name_type_instantiated.cs" />
-    <Compile Include="doubles\FirstName.cs" />
+    <Compile Include="doubles\Name.cs" />
+    <Compile Include="when_model_has_no_ctor.cs" />
+    <Compile Include="when_source_is_null.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\blazey.micro\blazey.micro.csproj">
